IALERT-3917: Add a batch size limit for the accumulator to write smaller amounts to the database and kick off processing sooner.